@@ -2,6 +2,12 @@
 # Copyright 2002-2004 Gentoo Foundation; Distributed under the GPL
 # Written by Daniel Robbins (drobbins@gentoo.org)
 
+  05 Oct 2004; Aron Griffis <agriffis@gentoo.org>:
+
+    Get rid of getcols() in sbin/functions.sh.  Use COLUMNS when
+    possible and otherwise clean up the COLS code.  Fix the "emerge
+    depend" detection code to use RC_ENDCOL="no"
+
   05 Oct 2004; Mike Frysinger <vapier@gentoo.org>:
 
     Changed behavior of the domainname init.d script.  It will now 
@@ -9,7 +15,7 @@
 
   04 Oct 2004; Mike Frysinger <vapier@gentoo.org>:
 
-    More (i mean a LOT more) services.  This takes care of #44458, 
+    More (I mean a LOT more) services.  This takes care of #44458, 
     #52881 #55939 #58997 #66166 #66297.  Gleaned many from the IANA 
     list/Fedora/FreeBSD/Debian.
 
